test/tests/compiler/1_int_constants/valid/newlines.plx
pub main(none) i32 



{
    return     0    
}
