test/tests/compiler/1_int_constants/invalid_lex/at_sign.plx
# The ` symbol doesn't appear in any tokens,
#   except inside string or character literals.
pub fn main(none) i32 {
    return 0`1
}
